# bakelite

./: .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  test.yaml
bakelite/: __init__.py
bakelite/generator/: __init__.py  cli.py  cpptiny.py  ctiny.py  parser.py  protodef.lark  python.py  sizes.py  types.py  util.py
bakelite/generator/runtimes/common/: cobs.h  crc.h
bakelite/generator/runtimes/cpptiny/: bakelite.h  cobs.h  crc.h  declarations.h  serializer.h
bakelite/generator/runtimes/ctiny/: cobs.h  crc.h  serializer.h  stream.h  types.h
bakelite/generator/templates/: cpptiny-bakelite.h.j2  cpptiny.h.j2  ctiny-bakelite.h.j2  ctiny.h.j2  python.py.j2
bakelite/proto/: __init__.py  crc.py  framing.py  runtime.py  serialization.py  types.py
bakelite/tests/: conftest.py
bakelite/tests/generator/: .gitignore  Makefile  cpptiny-protocol.cpp  cpptiny-serialization.cpp  ctiny-framing.c  ctiny-protocol.c  ctiny-serialization.c  proto.bakelite  struct-ctiny.bakelite  struct.bakelite  test_cli.py  test_parser.py  test_sizes.py
bakelite/tests/proto/: struct.ex  test_crc.py  test_framing.py  test_protocol.py  test_serialization.py  test_validation.py
bench/harness/: bench_framing_cpptiny.cpp  bench_framing_ctiny.c  bench_serialize_cpptiny.cpp  bench_serialize_ctiny.c  bench_simple_cpptiny.cpp  bench_simple_ctiny.c  bench_typical_cpptiny.cpp  bench_typical_ctiny.c
bench/protocols/: framing.bakelite  serialize.bakelite  simple.bakelite  typical.bakelite
bench/scripts/: analyze.py  download_toolchains.py  run_benchmarks.py
docs/: cpptiny.md  ctiny.md  index.md  protocol.md  python.md  quickstart.md  v0.4-plan.md
examples/: ReadMe.md
examples/arduino/: Makefile  ReadMe.md  arduino.ino  bakelite.h  platformio.ini  proto.bakelite  proto.h  proto.py
examples/chat/: chat.bakelite
examples/chat/cpptiny/: CMakeLists.txt  README.md  bakelite.h  client.cpp  proto.h  server.cpp
examples/chat/ctiny/: CMakeLists.txt  Makefile  README.md  bakelite.h  client.c  proto.h  server.c
