[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bakelite"
version = "0.4.0"
description = "A utility that makes it simple to communicate with your firmware."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Brendan Powers", email = "brendan0powers@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]
dependencies = [
    "lark>=1.0",
    "jinja2>=3",
    "click>=8",
]

[project.scripts]
bakelite = "bakelite.generator.cli:main"

[project.urls]
Homepage = "https://pypi.org/project/bakelite"
Documentation = "https://bakelite.readthedocs.io"
Repository = "https://github.com/brendan0powers/bakelite"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "PL",     # pylint
    "DTZ",    # flake8-datetimez
    "RUF",    # Ruff specific
    "FURB",   # refurb
    "PERF",   # perflint
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "TC",     # flake8-type-checking
]
ignore = [
    "B010",    # setattr with constant (needed for decorator type safety)
    "F403",    # Star imports for public API
    "F405",    # Names from star imports
    "PLR0911", # too-many-return-statements (common in type dispatch)
    "PLR0912", # too-many-branches (common in parsers/serializers)
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements (common in parsers/serializers)
    "PLR2004", # magic-value-comparison (common for protocol constants)
    "PLW0603", # global-statement (used for parser caching)
    "PLW2901", # redefined-loop-name (common pattern)
    "PERF203", # try-except in loop
    "PERF401", # list comprehension (sometimes less readable)
    "RET504",  # unnecessary-assign (can improve readability)
    "SLF001",  # private-member-access (internal API)
]

[tool.ruff.lint.per-file-ignores]
"bakelite/tests/*" = ["B015", "B017", "E711", "E712", "F401", "F841", "PT009", "PT011", "PT013", "RUF059"]

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
no_implicit_optional = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
exclude = ["bakelite/tests"]

[[tool.mypy.overrides]]
module = "lark.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["bakelite"]
addopts = "-vv"

[tool.coverage.run]
source = ["bakelite"]
omit = ["bakelite/tests/*"]
